--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,10 +87,10 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file('keystore.jks')
+            storePassword '12345678'
+            keyAlias 'key0'
+            keyPassword '12345678'
         }
     }
     buildTypes {
