--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,4 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+NODE_BINARY=/Users/supindersingh/.nvm/versions/node/v22.19.0/bin/node
