--- a/package.json
+++ b/package.json
@@ -7,13 +7,33 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "pod-install": "cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install",
+    "generate-apk": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-google-signin/google-signin": "^15.0.0",
+    "@react-native/new-app-screen": "0.81.1",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "@tanstack/react-query": "^5.85.6",
+    "axios": "^1.11.0",
+    "jwt-decode": "^4.0.0",
+    "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-native": "0.81.1",
-    "@react-native/new-app-screen": "0.81.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^3.3.0",
+    "react-native-reanimated": "^4.1.0",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.4",
+    "react-native-svg": "^15.12.1",
+    "react-native-svg-transformer": "^1.5.1",
+    "react-native-worklets": "^0.5.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
