--- a/ios/bus_booking/Info.plist
+++ b/ios/bus_booking/Info.plist
@@ -27,8 +27,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.</string>
-				<string>googleusercontent.apps.1093501500035-9hppru4pmqa44f2u67cn3am4s29sgd78</string>
+				<string>com.googleusercontent.apps.1093501500035-9hppru4pmqa44f2u67cn3am4s29sgd78</string>
 			</array>
 		</dict>
 	</array>
@@ -44,9 +43,17 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Okra-Bold.ttf</string>
+		<string>Okra-ExtraBold.ttf</string>
+		<string>Okra-Medium.ttf</string>
+		<string>Okra-MediumLight.ttf</string>
+		<string>Okra-Regular.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -61,13 +68,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Okra-Bold.ttf</string>
-		<string>Okra-ExtraBold.ttf</string>
-		<string>Okra-Medium.ttf</string>
-		<string>Okra-MediumLight.ttf</string>
-		<string>Okra-Regular.ttf</string>
-	</array>
 </dict>
 </plist>
